--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,7 @@
 <p><br><br></p>
 	<div class="container">
 		<div class="alert alert-primary" role="alert">
-			{% for string in user_input %}
-				{{string}}
-				<br/>
-			{% endfor %}
+		<!--e fshiva-->
 		</div>
 
 	<form action="/process" method="POST">
