--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,136 +1,88 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Chat Widget</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
- <link rel="stylesheet" href="css/style.css">
+	<title>Dashboard - SindiAI</title>
+	<link rel="shortcut icon" href="img/1.png" type="image/x-icon" />
+	<link rel="stylesheet" href="css/weather.css" type= "text/css">
+
+	<!-- Chat -->
+	<link rel="stylesheet" href="css/chat.css" type= "text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+	<!--
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	-->
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="container clearfix">
-    <div class="people-list" id="people-list">
-      <div class="search">
-        
-       
-      </div>
-      <ul class="list">
-        <li class="clearfix">
-          <img src="img/avatar.jpg" alt="avatar" width="50px" height="50px" />
-          <div class="about">
-            <div class="name">Cindy</div>
-            <div class="status">
-              <i class="fa fa-circle online"></i> online
-            </div>
-          </div>
-        </li>
-        
-    
-     <!--mose e fshij ikyt  
-    
-     <li class="clearfix">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_10.jpg" alt="avatar" />
-          <div class="about">
-            <div class="name">Peyton Mckinney</div>
-            <div class="status">
-              <i class="fa fa-circle online"></i> online
-            </div>
-          </div>
-        </li>
-        --> 
-      </ul>
-    </div>
-    
+<div class="box">
     <div class="chat">
-      <div class="chat-header clearfix">
-        <img src="img/avatar.jpg" alt="avatar" width="50px" height="50px" />
-        
-        <div class="chat-about">
-          <div class="chat-with">Chat with Cindy</div>
-          <div class="chat-num-messages">already 1 902 messages</div>
+        <div class="chat-header clearfix">
+            <img src="img/1.png" alt="avatar" width="50px" height="50px" />
+            <div class="chat-about">
+              <div class="chat-with">Chat with Cindy</div>
+              <div class="chat-num-messages">already 2 messages</div>
+            </div>
         </div>
-        <i class="fa fa-star"></i>
-      </div> <!-- end chat-header -->
-      
       <div class="chat-history">
         <ul>
-          
-         <!-- template per mesazhe
           <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i>Cindy</span>
-              <span class="message-data-time">10:12 AM, Today</span>
+            <div class="message-data align-right">
+              <span class="message-data-name"><i class="fa fa-circle me "></i>You</span>
+              <!-- <span class="message-data-time">10:12 AM, Today</span> -->
             </div>
-            <div class="message my-message">
-              Are we meeting today? Project has been already finished and I have results to show you.
+            <div class="message other-message float-right">
+              Input
             </div>
           </li>
-        --> 
-
-          <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i> Cindy</span>
-              <span class="message-data-time">10:20 AM, Today</span>
+          <li class="clearfix">
+            <div class="message-data ">
+             <!-- <span class="message-data-time" >{{time}}, Today</span> &nbsp; &nbsp; -->
+              <span class="message-data-name" >Sindi</span> <i class="fa fa-circle online"></i>
             </div>
-            <div class="message my-message">
-              Actually everything was fine. I'm very excited to show this to our team.
+            <div class="message my-message ">
+              Output
             </div>
           </li>
-          
-          <li>
-            <div class="message-data">
-              <span class="message-data-name"><i class="fa fa-circle online"></i> Cindy</span>
-              <span class="message-data-time">10:31 AM, Today</span>
-            </div>
-            <i class="fa fa-circle online"></i>
-            <i class="fa fa-circle online" style="color: #AED2A6"></i>
-            <i class="fa fa-circle online" style="color:#DAE9DA"></i>
-          </li>
-          
+            <li id="last"></li>
         </ul>
-        
-      </div> <!-- end chat-history -->
-      
+      </div>
+
       <div class="chat-message clearfix">
-        <textarea name="message-to-send" id="message-to-send" placeholder ="Type your message" rows="2"></textarea>
-        <i class="fa fa-file-image-o"></i> 
-        
-        <i class="fa fa-microphone fa-lg"></i>
-        <button>Send</button>
-      </div> <!-- end chat-message -->
-      
-    </div> <!-- end chat -->
-    
-  </div> <!-- end container -->
+          <form action="/process" method="POST">
+              <input autocomplete="off" class="chatbox" type="text" name="user_input" id="message-to-send" placeholder ="Type your message">
+              <button type="submit" >Send</button>
+          </form>
+          <button><i class="fa fa-microphone fa-lg"></i></button>
+          <div class="cleargix"></div>
+          <a class="button" href="/clear"><i class="fa fa-trash fa-lg"></i></a>
+      </div>
+    </div>
+</div>
+<div id="weather_wrapper">
+    <div class="weatherCard">
+        <div class="currentTemp">
+            <span class="temp">6&deg;C</span>
+            <span class="location">China</span>
+        </div>
+        <div class="currentWeather">
+            <span class="conditions"><img src="http://openweathermap.org/img/wn/{{icon}}@2x.png"></span>
+            <div class="info">
+                <span class="rain">6%</span>
+                <span class="wind">6 MPH</span>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Chat -->
 
-<script id="message-template" type="text/x-handlebars-template">
-  <li class="clearfix">
-    <div class="message-data align-right">
-      <span class="message-data-time" >{{time}}, Today</span> &nbsp; &nbsp;
-      <span class="message-data-name" >Olia</span> <i class="fa fa-circle me"></i>
-    </div>
-    <div class="message other-message float-right">
-      {{messageOutput}}
-    </div>
-  </li>
-</script>
-
-<script id="message-response-template" type="text/x-handlebars-template">
-  <li>
-    <div class="message-data">
-      <span class="message-data-name"><i class="fa fa-circle online"></i> Cindy</span>
-      <span class="message-data-time">{{time}}, Today</span>
-    </div>
-    <div class="message my-message">
-      {{response}}
-    </div>
-  </li>
-</script>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<link rel="stylesheet" href="js/chat.js" type= "text/css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js'></script><script  src="./script.js"></script>
- <script src="js/script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js'></script>
+<!--
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+-->
 </body>
 </html>
