--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/weather.css" type= "text/css">
 
 	<!-- Chat -->
-	<link rel="stylesheet" href="css/chat.css" type= "text/css">
+	<link rel="stylesheet" href="css/style.css" type= "text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 	<!--
@@ -75,7 +75,7 @@
 </div>
 <!-- Chat -->
 
-<link rel="stylesheet" href="js/chat.js" type= "text/css">
+<link rel="stylesheet" href="js/script.js" type= "text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js'></script>
