--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -1,63 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-body {
-  background: #C5DDEB;
-  font: 14px/20px "Lato", Arial, sans-serif;
-  padding: 40px 0;
-  color: white;
-}
-
 .container {
   margin: 0 auto;
   width: 660px;
   background: #444753;
   border-radius: 5px;
 }
-
-.people-list {
-  width: 260px;
-  float: left;
-}
-.people-list .search {
-  padding: 20px;
-}
-.people-list input {
-  border-radius: 3px;
-  border: none;
-  padding: 14px;
-  color: white;
-  background: #6A6C75;
-  width: 90%;
-  font-size: 14px;
-}
-.people-list .fa-search {
-  position: relative;
-  left: -25px;
-}
-.people-list ul {
-  padding: 20px;
-  height: 100px;
-}
-.people-list ul li {
-  padding-bottom: 20px;
-}
-.people-list img {
-  float: left;
-}
-.people-list .about {
-  float: left;
-  margin-top: 8px;
-}
-.people-list .about {
-  padding-left: 8px;
-}
-.people-list .status {
-  color: #92959E;
-}
-
 .chat {
   width: 400px;
   float: left;
@@ -89,7 +35,6 @@ body {
   float: right;
   color: #D8DADF;
   font-size: 20px;
-  margin-top: 12px;
 }
 .chat .chat-history {
   padding: 30px 30px 20px;
@@ -140,7 +85,7 @@ body {
 .chat .chat-message {
   padding: 30px;
 }
-.chat .chat-message textarea {
+.chat .chat-message .chatbox{
   width: 100%;
   border: none;
   padding: 10px 20px;
@@ -165,6 +110,20 @@ body {
   background: #F2F5F8;
 }
 .chat .chat-message button:hover {
+  color: #75b1e8;
+}
+
+.chat .chat-message .button {
+  float: right;
+  color: #94C2ED;
+  font-size: 16px;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  background: #F2F5F8;
+}
+.chat .chat-message .button:hover {
   color: #75b1e8;
 }
 
