--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="css/weather.css" type= "text/css">
 
 	<!-- Chat -->
-	<link rel="stylesheet" href="css/style.css" type= "text/css">
+  <link rel="stylesheet" href="css/style.css" type= "text/css">
+  <link rel="stylesheet" href="css/scrollbar.css" type= "text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 	<!--
