--- a/templates/chat.html
+++ b/templates/chat.html
@@ -21,12 +21,11 @@
             <img src="{{ url_for('static',filename='img/1.png') }}" alt="avatar" width="50px" height="50px" />
             <div class="chat-about">
               <div class="chat-with">Chat with Sindi</div>
-              <div class="chat-num-messages">already {{ user_input|length }} messages</div>
+              <div class="chat-num-messages">already 2 messages</div>
             </div>
         </div>
       <div class="chat-history" id="chat">
         <ul>
-          {% for i in range(0, user_input|length, 2) %}
           <br>
           <li>
             <div class="message-data align-right">
@@ -34,7 +33,7 @@
               <!-- <span class="message-data-time">10:12 AM, Today</span> -->
             </div>
             <div class="message other-message float-right">
-              {{user_input[i]}}
+              Hello
             </div>
           </li>
           <li class="clearfix">
@@ -43,10 +42,9 @@
               <span class="message-data-name" >Sindi</span> <i class="fa fa-circle online"></i>
             </div>
             <div class="message my-message ">
-              {{user_input[i+1]}}
+              Hellooo
             </div>
           </li>
-          {% endfor %}
             <li id="last"></li>
         </ul>
       </div>
@@ -68,14 +66,14 @@
   <div class="weather">
     <div class="weatherCard">
         <div class="currentTemp">
-            <span class="temp">{{temp}}&deg;C</span>
-            <span class="location">{{location}}</span>
+            <span class="temp">6&deg;C</span>
+            <span class="location">Berlin</span>
         </div>
         <div class="currentWeather">
-            <span class="conditions"><img src="http://openweathermap.org/img/wn/{{icon}}@2x.png"></span>
+            <span class="conditions"><img src="http://openweathermap.org/img/wn/@2x.png"></span>
             <div class="info">
-                <span class="rain">{{humidity}}%</span>
-                <span class="wind">{{wind}} MPH</span>
+                <span class="rain">34%</span>
+                <span class="wind">34 MPH</span>
             </div>
         </div>
     </div>
